@@ -1,3 +1,12 @@
+2008-04-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/UndoManager.py
+	* src/MainWindow.py
+	* src/MMapArea.py
+	* src/ImageThought.py
+	Add undo/redo to context sensitive menu. Use an image item for
+	change image.
+
 2008-04-07 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/DrawingThought.py
